<resources>
    <string name="app_name">Demo_v14.3.20.1</string>
    <string name="init_sdk">SDK初始化</string>
    <string name="check_area">查看地区</string>
    <string name="init_custom_sdk"> SDK初始化 自定义GDPR</string>
    <string name="gdpr_upload_data">GDPR数据是否上报</string>
    <string name="change_gdpr_select">更改GDPR数据上报选择</string>
    <string name="load_ad">进入加载广告页面</string>
    <string name="Banner">横幅Banner</string>
    <string name="Interstitial">插屏Interstitial</string>
    <string name="RewardedVideo">激励RewardedVideo</string>
    <string name="OfferWall">积分墙OfferWall</string>
    <string name="AdvancedNative">原生Native</string>
    <string name="NativeListView">原生信息流NativeList</string>
    <string name="NativeBannerListView">原生横幅NativeBannerList</string>
    <string name="NativeBanner">原生横幅NativeBanner</string>
    <string name="NativeDraw">信息流DrawVideo</string>
    <string name="Splash">开屏Splash</string>
    <string name="InterActivie">互动广告Interactive</string>
    <string name="MeidaVideo">插播广告IMA</string>
    <string name="MeidaVideoVMAP">插播广告VMAP</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="title_activity_huawei_native_down_load">HuaweiNativeDownLoad</string>


</resources>
