<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="初始化SDK : "
            android:textStyle="bold"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_gdpr_sdk_init"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/init_sdk"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/gdpr_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_custom_gdpr_sdk_init"
                android:layout_width="200.0dip"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/init_custom_sdk"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/gdpr_custom_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/gdpr_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/gdpr_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="你是否接受GDPR协议？"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_gdpr_yeu"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:layout_below="@+id/gdpr_tip"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="YES"
                android:textSize="16sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_gdpr_neu"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:layout_below="@+id/gdpr_tip"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/btn_gdpr_yeu"
                android:gravity="center"
                android:text="NO"
                android:textSize="16sp"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/unknown_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="你是不是欧盟用户？"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_yeu"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:layout_below="@+id/tip"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="YES"
                android:textSize="16sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_neu"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:layout_below="@+id/tip"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/btn_yeu"
                android:gravity="center"
                android:text="NO"
                android:textSize="16sp"
                android:visibility="visible" />
        </RelativeLayout>


        <Button
            android:id="@+id/gdpr_view"
            android:layout_width="200.0dip"
            android:layout_height="50.0dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="更新GDPR状态"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/is_gdpr_child"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="isGDPRChild"
                android:textSize="16sp"
                android:visibility="gone"/>
            <CheckBox
                android:id="@+id/is_child"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="isCOPPAChild"
                android:textSize="16sp"/>
            <CheckBox
                android:id="@+id/do_not_sell"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="ccpa"
                android:textSize="16sp"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/is_personad"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:checked="true"
            android:gravity="center"
            android:text="开启个性化广告"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/is_privacyUser"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:checked="true"
            android:gravity="center"
            android:text="获取三方隐私权限"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/interstitial_ad"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/Interstitial"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rewarded_video_ad"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/RewardedVideo"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/offerwall_ad"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/OfferWall"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/native_ad_advanced"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/AdvancedNative"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nativelist_ad"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/NativeListView"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nativebanner_ad"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/NativeBanner"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/draw_video_view"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/NativeDraw"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/banner_ad"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/Banner"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/splash_ads"
                android:layout_width="200.0dip"
                android:layout_height="50.0dip"
                android:gravity="center"
                android:text="@string/Splash"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>